--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,10 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew build
 
+Publish:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
