--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,21 +36,21 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew build
 
-Publish:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+  publish:
+      runs-on: ubuntu-latest
+      needs: build
+      steps:
+        - name: Login to Docker Hub
+          uses: docker/login-action@v3
+          with:
+            username: ${{ secrets.DOCKERHUB_USERNAME }}
+            password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and push
-        uses: docker/build-push-action@v5
-        with:
-          push: true
-          tags: sagar50550/demo_project:1.0
+        - name: Build and push
+          uses: docker/build-push-action@v5
+          with:
+            push: true
+            tags: sagar50550/demo_project:1.0
 
 
 
